add id a paragrafos e listas

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     </header>
 
     <main id="main-content">
+        <p id="rgb-color"></p>
+        <ul id="color-options"></ul>
     </main>
     <script src="script.js"></script>
 </body>
