add id answer, escolha uma cor

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <main id="main-content">
         <p id="rgb-color"></p>
+        <p id="answer">Escolha uma cor</p>
         <ul id="color-options"></ul>
     </main>
     <script src="script.js"></script>
