--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <p id="rgb-color"></p>
         <p id="answer">Escolha uma cor</p>
         <ul id="color-options"></ul>
+        <button id="reset-game">Reiniciar</button>
     </main>
     <script src="script.js"></script>
 </body>
