--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Color Guess</title>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;500;600;700;800&family=Noto+Sans:wght@400;700&family=Noto+Serif:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
+    <title>COLOR GUESS</title>
 </head>
 
 <body>
@@ -18,6 +21,7 @@
         <p id="rgb-color"></p>
         <p id="answer">Escolha uma cor</p>
         <ul id="color-options"></ul>
+        <p id="score"></p>
         <button id="reset-game">Reiniciar</button>
     </main>
     <script src="script.js"></script>
